Adds more visual effects to hovercards
Adds fadeins and fadeouts, a loading timer, and an error message if
nothing can be found.

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
       "js": [
         "jquery-2.1.1.min.js",
         "jquery-highlight.js",
+        "spinners.min.js",
         "utilities.js",
         "config.js",
         "cardstacks.js",
