--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "css": ["styles.css"],
+      "css": [
+        "http://fonts.googleapis.com/css?family=Ubuntu:500|Open+Sans",
+        "styles.css"],
       "js": [
         "jquery-2.1.1.min.js",
         "jquery-highlight.js",
