--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "css": [
-        "http://fonts.googleapis.com/css?family=Ubuntu:500|Open+Sans",
-        "styles.css"],
+      "css": [ "fonts.css", "styles.css"],
       "js": [
         "jquery-2.1.1.min.js",
         "jquery-highlight.js",
