Wikimedia links in iframe point to mobile sites
Links to wikimedia sites in a wikipedia mobile site will point to the
mobile version of the wikimedia site (Wikipedia usually just gives out
regular links). A new content script overrides these so that the mobile
link is presented.

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,12 @@
         "content_script.js"
       ],
       "run_at": "document_end"
+    },
+    {
+      "matches": ["*://en.m.wikipedia.org/*"],
+      "js": [ "jquery-2.1.1.min.js", "mobile-wikipedia-links.js" ],
+      "run_at": "document_end",
+      "all_frames": true
     }
   ]
 }
