description changes for chrome store
changes app description and adds a new logo size

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Context",
-  "description": "Extension for providing additional context about any selected term",
+  "description": "Understand everything you read",
 
   "version": "0.1.0",
   "manifest_version": 2,
