Add options page html & css
no javascript yet, so there is no functionality

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "manifest_version": 2,
 
+  "options_page": "options.html",
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
