--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
   "manifest_version": 2,
 
   "options_page": "options.html",
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
 
   "content_scripts": [
     {
