options now functional
options page allows choosing if hovercards will appear automatically,
and allows the user to create a blacklist. These options are stored.

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,10 @@
     "chrome_style": true
   },
 
+  "permissions": [
+    "storage"
+  ],
+  
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
