--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
   "version": "0.1.0",
   "manifest_version": 2,
 
+  "background": {
+    "scripts": ["event-page.js"],
+    "persistent": false
+  },
+
   "options_page": "options.html",
   "options_ui": {
     "page": "options.html",
@@ -12,9 +17,10 @@
   },
 
   "permissions": [
-    "storage"
+    "storage",
+    "contextMenus"
   ],
-  
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
