heavy refactoring, no functional changes
Changed naming scheme, made sure variable/constant names had consistent
style, and pulled content retrieving logic out of the main content
script. This will allow retrieving logic to /also/ be used in context
menu (before, it was tightly coupled with the original content script)

--- a/manifest.json
+++ b/manifest.json
@@ -32,8 +32,9 @@
         "utilities.js",
         "config.js",
         "cardstacks.js",
-        "hover_pane.js",
-        "content_script.js"
+        "hover-pane.js",
+        "content-retriever.js",
+        "content-script.js"
       ],
       "run_at": "document_end"
     },
