--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
   "version": "0.1.0",
   "manifest_version": 2,
 
+  "background": {
+    "scripts": ["event-page.js"],
+    "persistent": false
+  },
+
   "options_page": "options.html",
   "options_ui": {
     "page": "options.html",
@@ -12,9 +17,11 @@
   },
 
   "permissions": [
-    "storage"
+    "storage",
+    "contextMenus",
+    "tabs"
   ],
-  
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -26,8 +33,9 @@
         "utilities.js",
         "config.js",
         "cardstacks.js",
-        "hover_pane.js",
-        "content_script.js"
+        "hover-pane.js",
+        "content-retriever.js",
+        "content-script.js"
       ],
       "run_at": "document_end"
     },
